@@ -14,7 +14,7 @@
  * limitations under the License.
  *
  * SPDX-License-Identifier: Apache-2.0
- * Copyright (c) Steve Springett. All Rights Reserved.
+ * Copyright (c) OWASP Foundation. All Rights Reserved.
  */
 package org.dependencytrack.tasks;
 
@@ -23,15 +23,13 @@ import alpine.event.framework.Event;
 import alpine.event.framework.Subscriber;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.time.DateFormatUtils;
-import org.datanucleus.PropertyNames;
 import org.dependencytrack.event.InternalComponentIdentificationEvent;
 import org.dependencytrack.model.Component;
 import org.dependencytrack.persistence.QueryManager;
-import org.dependencytrack.util.InternalComponentIdentificationUtil;
+import org.dependencytrack.util.InternalComponentIdentifier;
 
 import javax.jdo.PersistenceManager;
 import javax.jdo.Query;
-import javax.jdo.Transaction;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
@@ -65,11 +63,7 @@ public class InternalComponentIdentificationTask implements Subscriber {
         try (final var qm = new QueryManager()) {
             final PersistenceManager pm = qm.getPersistenceManager();
 
-            // Disable the DataNucleus L2 cache for this persistence manager.
-            // The cache will hold references to the queried objects, preventing them
-            // from being garbage collected. This is not required the case of this task.
-            pm.setProperty(PropertyNames.PROPERTY_CACHE_L2_TYPE, "none");
-
+            final var internalComponentIdentifier = new InternalComponentIdentifier();
             List<Component> components = fetchNextComponentsPage(pm, null);
             while (!components.isEmpty()) {
                 for (final Component component : components) {
@@ -78,7 +72,7 @@ public class InternalComponentIdentificationTask implements Subscriber {
                         coordinates = component.getGroup() + ":" + coordinates;
                     }
 
-                    final boolean internal = InternalComponentIdentificationUtil.isInternalComponent(component, qm);
+                    final boolean internal = internalComponentIdentifier.isInternal(component);
                     if (internal) {
                         LOGGER.debug("Component " + coordinates + " (" + component.getUuid() + ") was identified to be internal");
                     }
@@ -94,20 +88,11 @@ public class InternalComponentIdentificationTask implements Subscriber {
                     }
 
                     if (component.isInternal() != internal) {
-                        final Transaction trx = pm.currentTransaction();
-                        try {
-                            trx.begin();
-                            component.setInternal(internal);
-                            trx.commit();
-                        } finally {
-                            if (trx.isActive()) {
-                                trx.rollback();
-                            }
-                        }
+                        qm.runInTransaction(() -> component.setInternal(internal));
                     }
                 }
 
-                final long lastId = components.get(components.size() - 1).getId();
+                final long lastId = components.getLast().getId();
                 components = fetchNextComponentsPage(pm, lastId);
             }
         }
